--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ repositories {
 
 group 'com.iheartradio.m3u8'
 archivesBaseName = 'open-m3u8'
-version '0.0.3'
+sourceCompatibility = 1.7
+version '0.0.4'
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
